fixed wrap on date when C | F clicked

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -39,6 +39,7 @@
 
 .WeatherData .date {
   font-size: 22px !important;
+  white-space: nowrap;
 }
 
 .Weather input {
